--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ footer a {
     color: #024e76;
 }
 
-/* Section Styling */
+/* What We/You Do Styling */
 
 .section-title {
     font-size: 55px;
@@ -184,4 +184,55 @@ footer a {
 
 .steps span {
     font-size: 38px;
+}
+
+/* Trainer Styling */
+
+.trainers {
+    text-align: center;
+}
+
+.trainer {
+    width: 900px;
+    margin: 0 auto 30px auto;
+    background: #024e76;
+    color: #fce138;
+    overflow: auto;
+}
+
+.trainer img {
+    width: 35%;
+    float: left;
+    overflow: auto;
+}
+
+.trainer-bio {
+    padding: 35px;
+    float: left;
+    width: 65%;
+    overflow: auto;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.trainer-bio h3 {
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+
+.trainer-bio p {
+    font-size: 17px;
+    line-height: 1.3;
 }
