--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ section {
     position: relative;
 }
 
+
 .hero-form {
     background-color: #fce138;
     padding: 20px;
@@ -235,4 +236,28 @@ footer a {
 .trainer-bio p {
     font-size: 17px;
     line-height: 1.3;
+}
+
+/* REACH OUT STYLES START */
+.contact {
+    text-align: center;
+    background: #024e76;
+}
+
+.contact h2 {
+    color: #fce138;
+}
+
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px
+    color: white;
 }
