--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,9 @@ section {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 header h1 {
@@ -80,7 +83,6 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    display: inline;
 }
 
 header a {
@@ -89,7 +91,6 @@ header a {
 }
 
 header nav {
-    float: right;
     margin: 7px 0;
 }
 
