--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,10 +151,11 @@ footer a {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%
   }
   
   .primary-border {
@@ -165,20 +166,16 @@ footer a {
     border-color: #39a6b2;
   }
 
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -209,7 +206,6 @@ footer a {
 /* Trainer Styling */
 
 .trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -233,14 +229,6 @@ footer a {
     overflow: auto;
 }
 
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
 .trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
@@ -259,7 +247,6 @@ footer a {
 
 /* REACH OUT STYLES START */
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
@@ -300,3 +287,17 @@ footer a {
 }
 
 /* REACH OUT STYLES END */
+
+/* UTILITY STYLES */
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
+}
+
