--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-cta {
@@ -29,7 +30,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -116,7 +117,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -149,7 +150,7 @@ footer a {
 /* What We/You Do Styling */
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -351,3 +352,22 @@ footer a {
     display: flex;
 }
 
+/* END UTILITY STYLES */
+
+/* MEDIA QUERIES FOR SMALL DESKTOP SCREENS & SMALLER */
+@media screen and (max-width: 980px) {
+
+    }
+}
+
+/* MEDIA QUERIES FOR TABLETS & SMALLER */
+@media screen and (max-width: 768px) {
+
+    }
+}
+
+/* MEDIA QUERIES FOR PHONES & SMALLER */
+@media screen and (max-width: 575px) {
+
+    }
+}
