--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,17 +37,20 @@ section {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
-    background-color: #fce138;
+    background-color: rgba(252, 225, 56, 0.8);
     padding: 20px;
     color: #024e76;
     border-style: solid;
     border-width: 3px;
     border-color: #024e76;
+    border-radius: 15px;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form h3 {
@@ -60,7 +63,9 @@ section {
 }
 
 .form-input {
+    background-color: rgba(255,255,255, 0.75);
     border: 1px solid #024e76;
+    border-radius: 10px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
@@ -68,6 +73,11 @@ section {
     width: 100%;
     margin-bottom: 15px;
 }
+
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+  }
 
 .hero-form label {
     margin: 0 5px;
@@ -77,9 +87,14 @@ section {
     color: #fce138;
     background-color: #024e76;
     border: none;
+    border-radius: 10px;
     padding: 10px 20px;
     font-size: 16px;
 }
+
+.hero-form button:hover {
+    background-color: #39a6b2;  
+  }
 
 /* Hero Style End */
 
@@ -90,6 +105,14 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 header h1 {
@@ -97,6 +120,7 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
@@ -120,7 +144,15 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+  }
 
 /* apply styles to the <footer> */
 footer {
@@ -189,6 +221,10 @@ footer a {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+}
+
+.step:last-child {
+    border-bottom: none;
 }
 
 .step-info {
@@ -292,7 +328,6 @@ footer a {
 
 .contact-info iframe {
     height: 400px;
-    margin-right: 30px;
 }
 
 .contact-info div {
@@ -317,7 +352,9 @@ footer a {
 }
 
 .contact-form input, .contact-form textarea {
+    background-color: rgba(255,255,255, 0.75);
     border: 1px solid #024e76;
+    border-radius: 10px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
@@ -327,15 +364,26 @@ footer a {
     margin-top: 5px;
 }
 
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+  }
+
 .contact-form button {
     width: 100%;
     border: none;
+    border-radius: 10px;
     background: #fce138;
     color: #024e76;
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
 }
+
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
+  }
 
 /* REACH OUT STYLES END */
 
@@ -359,6 +407,7 @@ footer a {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
       }
     
       header h1 {
